@@ -170,7 +170,7 @@ class shdaclient(Thread):
                         self.connected = False
                         self.logger.info("Disconnected from {}".format(self.peername))
                 else:
-                    sleep(1)
+                    sleep(self.timeout)
 
             self.logger.info("terminating")
         except Exception as e:
